--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,27 @@
+
+input[type='file'] {
+  color: transparent;
+}
+
+.type{
+     display: inline-block;
+    height: 80px;
+    width: 80px;
+    border: 1px solid gray;
+    border-top-right-radius: 0px;
+}
+#typesHolder{
+    display: inline-block;
+    height: 80px;
+    width: 80px;
+    border: 1px solid gray;
+    border-top-right-radius: 0px;
+
+}
 #listBox{
-     width: 38vw;
+    width: 38vw;
     height: 1000px;
-        border: 1px solid black;
+    border: 1px solid black;
     padding: 10px;
     border-radius: 5%;
     display: inline-block;
@@ -10,9 +30,9 @@
 
 .repositoryBox {
     display: inline-block;
-         width: 60vw;
+    width: 60vw;
     height: 1000px;
- padding: 10px;
+    padding: 10px;
     border-radius: 5%;
 }
 .block {
