--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
-
+body{
+    background-color: #E0E0E0 !important;
+}
 input[type='file'] {
   color: transparent;
+    display: inline-block;
+    width: 20px;
 }
 
 .type{
@@ -21,7 +25,7 @@ input[type='file'] {
 #listBox{
     width: 38vw;
     height: 1000px;
-    border: 1px solid black;
+    border: 1px solid darkgrey;
     padding: 10px;
     border-radius: 5%;
     display: inline-block;
@@ -38,7 +42,6 @@ input[type='file'] {
 .block.ui-widget-content.ui-draggable.ui-draggable-handle {
     width: 200px;
     border-collapse: collapse;
-    border: 1px solid black;
     padding: 10px;
     margin:2%;
     border-radius: 5%;
@@ -56,10 +59,8 @@ input[type='file'] {
     display: inline-block;
 }
 .blockType {
-
     height: 40px;
     width: 40px;
-    border: 1px solid gray;
     border-top-right-radius: 0px;
     display: inline-block;
 }
@@ -71,4 +72,22 @@ input[type='file'] {
 }
 .blockLength {
     text-align: center;
+}
+
+
+.vignette {
+  position: relative;
+}
+
+.vignette:after {
+        border-radius: 10%;
+
+ box-shadow: inset 0 0 1em #00BCD4;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    content: "";
 }
