--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ body{
     /*background-color:  !important;*/
 }
 input[type='file'] {
-  color: transparent;
+    color: transparent;
     display: inline-block;
     width: 20px;
 }
 
 .type{
-     display: inline-block;
+    display: inline-block;
     height: 80px;
     width: 80px;
     border: 1px solid gray;
@@ -76,13 +76,13 @@ div.block.ui-widget-content.ui-draggable.ui-draggable-handle {
 
 
 .vignette {
-  position: relative;
+    position: relative;
 }
 
 .vignette:after {
-        border-radius: 10%;
+    border-radius: 10%;
 
- box-shadow: inset 0 0 1em #00BCD4;
+    box-shadow: inset 0 0 1em #00BCD4;
     position: absolute;
     top: 0;
     left: 0;
@@ -90,4 +90,13 @@ div.block.ui-widget-content.ui-draggable.ui-draggable-handle {
     height: 100%;
     z-index: 2;
     content: "";
+}
+
+#trash {
+    display: inline-block;
+    border-color: #2b2b2b;
+    height: 250px;
+    width: 250px;
+    border: 1px solid;
+
 }
