--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,14 @@ div.block.ui-widget-content.ui-draggable.ui-draggable-handle {
 #trash {
     display: inline-block;
     border-color: #2b2b2b;
-    height: 250px;
-    width: 250px;
+    height: 100vh;
+    width: 35vw;
     border: 1px solid;
 
+}
+.slot {
+     border-color: #2b2b2b;
+    height: 10vh;
+    width: 90%;
+    border: 1px solid;
 }
