Creating the function to create Any Parent-block Creating HTML for the calendar view FIx : Calendar needs to be dropable
Fixed : HTML organization

--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,6 @@ div.block.ui-widget-content.ui-draggable.ui-draggable-handle {
     width: 90%;
     border: 1px solid;
 }
+.CreateMotherType{
+    display: inline-block;
+}
